plugins {
	id 'java-library-distribution'
}

description = "WS3D-Proxy"

sourceCompatibility = 1.8
targetCompatibility = 1.8
version = '0.0.3'

repositories {
    mavenCentral()
    flatDir {
        dirs 'lib'      
    }
}

dependencies {
   implementation group: 'org.json', name: 'json', version: '20160212'
   testImplementation group: 'junit', name: 'junit', version: '4.12' 
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        //configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
    manifest {
      attributes(
        'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
      )
    }
}
task javadocJar(type: Jar) {
    archiveClassifier = 'javadoc'
    from javadoc
    from {
    	configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    javadoc.options.addStringOption('Xdoclint:none', '-quiet') // this is to avoid complaints about documentation missing parameter description
}
task sourcesJar(type: Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
    from {
    	configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
artifacts
{
    //archives javadocJar, sourcesJar
    archives sourcesJar
}



